--- a/eng/pipelines/patch-release.yml
+++ b/eng/pipelines/patch-release.yml
@@ -4,16 +4,134 @@ extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client-patch.yml
   parameters:
     artifacts:
-    - name: azure-sdk-template
+    - name: azure-messaging-webpubsub
       groupId: com.azure
-      safeName: azuresdktemplate
-      ServiceDirectory: template
-    - name: azure-sdk-template-two
+      safeName: azuremessagingwebpubsub
+      ServiceDirectory: webpubsub
+    - name: azure-storage-blob-cryptography
       groupId: com.azure
-      safeName: azuresdktemplatetwo
-      ServiceDirectory: template
-    - name: azure-sdk-template-three
+      safeName: azurestorageblobcryptography
+      ServiceDirectory: storage
+    - name: azure-data-schemaregistry
       groupId: com.azure
-      safeName: azuresdktemplatethree
-      ServiceDirectory: template
+      safeName: azuredataschemaregistry
+      ServiceDirectory: schemaregistry
+    - name: azure-storage-blob
+      groupId: com.azure
+      safeName: azurestorageblob
+      ServiceDirectory: storage
+    - name: azure-messaging-eventhubs-checkpointstore-blob
+      groupId: com.azure
+      safeName: azuremessagingeventhubscheckpointstoreblob
+      ServiceDirectory: eventhubs
+    - name: azure-mixedreality-authentication
+      groupId: com.azure
+      safeName: azuremixedrealityauthentication
+      ServiceDirectory: mixedreality
+    - name: azure-developer-loadtesting
+      groupId: com.azure
+      safeName: azuredeveloperloadtesting
+      ServiceDirectory: loadtesting
+    - name: azure-identity-extensions
+      groupId: com.azure
+      safeName: azureidentityextensions
+      ServiceDirectory: identity
+    - name: azure-containers-containerregistry
+      groupId: com.azure
+      safeName: azurecontainerscontainerregistry
+      ServiceDirectory: containerregistry
+    - name: azure-ai-textanalytics
+      groupId: com.azure
+      safeName: azureaitextanalytics
+      ServiceDirectory: textanalytics
+    - name: azure-storage-queue
+      groupId: com.azure
+      safeName: azurestoragequeue
+      ServiceDirectory: storage
+    - name: azure-security-confidentialledger
+      groupId: com.azure
+      safeName: azuresecurityconfidentialledger
+      ServiceDirectory: confidentialledger
+    - name: azure-search-documents
+      groupId: com.azure
+      safeName: azuresearch
+      ServiceDirectory: search
+    - name: azure-monitor-query
+      groupId: com.azure
+      safeName: azuremonitorquery
+      ServiceDirectory: monitor
+    - name: azure-ai-metricsadvisor
+      groupId: com.azure
+      safeName: azureaimetricsadvisor
+      ServiceDirectory: metricsadvisor
+    - name: azure-security-keyvault-administration
+      groupId: com.azure
+      safeName: azuresecuritykeyvaultadministration
+      ServiceDirectory: keyvault
+    - name: azure-storage-file-share
+      groupId: com.azure
+      safeName: azurestoragefileshare
+      ServiceDirectory: storage
+    - name: azure-storage-common
+      groupId: com.azure
+      safeName: azurestoragecommon
+      ServiceDirectory: storage
+    - name: azure-storage-blob-batch
+      groupId: com.azure
+      safeName: azurestorageblobbatch
+      ServiceDirectory: storage
+    - name: azure-data-schemaregistry-apacheavro
+      groupId: com.azure
+      safeName: azuredataschemaregistryapacheavro
+      ServiceDirectory: schemaregistry
+    - name: azure-security-attestation
+      groupId: com.azure
+      safeName: azuresecurityattestation
+      ServiceDirectory: attestation
+    - name: azure-storage-internal-avro
+      groupId: com.azure
+      safeName: azurestorageinternalavro
+      skipPublishDocMs: true
+      skipPublishDocGithubIo: true
+      ServiceDirectory: storage
+    - name: azure-messaging-webpubsub-client
+      groupId: com.azure
+      safeName: azuremessagingwebpubsubclient
+      ServiceDirectory: webpubsub
+    - name: azure-security-keyvault-certificates
+      groupId: com.azure
+      safeName: azuresecuritykeyvaultcertificates
+      ServiceDirectory: keyvault
+    - name: azure-ai-formrecognizer
+      groupId: com.azure
+      safeName: azureaiformrecognizer
+      ServiceDirectory: formrecognizer
+    - name: azure-messaging-eventgrid
+      groupId: com.azure
+      safeName: azuremessagingeventgrid
+      ServiceDirectory: eventgrid
+    - name: azure-storage-file-datalake
+      groupId: com.azure
+      safeName: azurestoragefiledatalake
+      ServiceDirectory: storage
+    - name: azure-security-keyvault-secrets
+      groupId: com.azure
+      safeName: azuresecuritykeyvaultsecrets
+      ServiceDirectory: keyvault
+    - name: azure-mixedreality-remoterendering
+      groupId: com.azure
+      safeName: azuremixedrealityremoterendering
+      ServiceDirectory: remoterendering
+    - name: azure-iot-deviceupdate
+      groupId: com.azure
+      safeName: azureiotdeviceupdate
+      ServiceDirectory: deviceupdate
+    - name: azure-messaging-eventhubs
+      groupId: com.azure
+      safeName: azuremessagingeventhubs
+      ServiceDirectory: eventhubs
+    - name: azure-digitaltwins-core
+      groupId: com.azure
+      safeName: azuredigitaltwinscore
+      ServiceDirectory: digitaltwins
 
