--- a/sdk/search/azure-search-perf/pom.xml
+++ b/sdk/search/azure-search-perf/pom.xml
@@ -29,7 +29,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-search-documents</artifactId>
-      <version>11.7.0-beta.3</version> <!-- {x-version-update;com.azure:azure-search-documents;current} -->
+      <version>11.6.4</version> <!-- {x-version-update;com.azure:azure-search-documents;current} -->
     </dependency>
 
     <dependency>
